k8s/apps/bitwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  labels:
    app.kubernetes.io/name: bitwarden
