k8s/apps/bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app.kubernetes.io/name: bitwarden
    app.kubernetes.io/instance: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden
      app.kubernetes.io/instance: bitwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden
        app.kubernetes.io/instance: bitwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.30.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden-data
